--- a/source/_assets/css/custom.css
+++ b/source/_assets/css/custom.css
@@ -1,11 +1,30 @@
-.main {
-  @apply h-screen flex flex-col items-center justify-center bg-gray-300;
+.nav-item {
+	@apply block px-6 py-3 font-bold uppercase tracking-tight transition duration-300 ease-in-out;
 }
 
-.main a {
-  @apply text-blue-500 no-underline;
+.nav-item:hover {
+	@apply bg-yellow-500
 }
 
-.main a:hover {
-  @apply text-blue-700;
+.hero {	
+	background-color: rgba(0, 0, 0, 0.25);
+  	background-blend-mode: soft-light;
+  	background-image: url('../video/she-awards-background-poster-compressed.jpg');
+}
+
+/* .webp .hero {
+	background-image: url(assets/video/she-awards-background-poster-compressed.jpg);
+}
+
+.no-webp .hero {
+	background-image: url(assets/video/she-awards-background-poster-compressed.jpg);
+}*/
+
+.stats h3::after {
+	content: ' ';
+	display: block;
+	width: 30px;
+	height: 5px;
+	margin: 10px auto 15px auto;
+	background-color: #ffffff;
 }
