--- a/source/_assets/css/custom.css
+++ b/source/_assets/css/custom.css
@@ -6,19 +6,30 @@
 	@apply bg-yellow-500
 }
 
-.hero {	
-	background-color: rgba(0, 0, 0, 0.25);
-  	background-blend-mode: soft-light;
-  	background-image: url('../video/she-awards-background-poster-compressed.jpg');
+.btn-primary {
+	@apply inline-block text-center bg-yellow-500 px-4 py-3 rounded-lg uppercase font-bold text-white tracking-tighter	
 }
 
-/* .webp .hero {
-	background-image: url(assets/video/she-awards-background-poster-compressed.jpg);
+.hero, .highlights-video {	
+	background-color: rgba(0, 0, 0, 0.50);
+  	background-blend-mode: soft-light;
+}
+
+.webp .hero {
+	background-image: url('../video/she-awards-background-poster-compressed.webp');
 }
 
 .no-webp .hero {
-	background-image: url(assets/video/she-awards-background-poster-compressed.jpg);
-}*/
+	background-image: url('../video/she-awards-background-poster-compressed.jpg');
+}
+
+.webp .host {
+	background-image: url('../images/layout/home-alistair-mcgowan-compressed.webp');
+}
+
+.no-webp .host {
+	background-image: url('../images/layout/home-alistair-mcgowan-compressed.jpg');
+}
 
 .stats h3::after {
 	content: ' ';
@@ -27,4 +38,48 @@
 	height: 5px;
 	margin: 10px auto 15px auto;
 	background-color: #ffffff;
+}
+
+div[class*="gallery-tile-"] {
+	@apply bg-cover bg-center overflow-hidden
+}
+
+.webp .gallery-tile-a {
+	background-image: url('../images/layout/home-gallery-tile-a-compressed.webp');
+}
+
+.no-webp .gallery-tile-a {
+	background-image: url('../images/layout/home-gallery-tile-a-compressed.jpg');
+}
+
+.webp .gallery-tile-b {
+	background-image: url('../images/layout/home-gallery-tile-b-compressed.webp');
+}
+
+.no-webp .gallery-tile-b {
+	background-image: url('../images/layout/home-gallery-tile-a-compressed.jpg');
+}
+
+.webp .gallery-tile-c {
+	background-image: url('../images/layout/home-gallery-tile-c-compressed.webp');
+}
+
+.no-webp .gallery-tile-c {
+	background-image: url('../images/layout/home-gallery-tile-a-compressed.jpg');
+}
+
+.webp .highlights-video {
+	background-image: url('../images/layout/banquet-compressed.webp');
+}
+
+.no-webp .highlights-video {
+	background-image: url('../images/layout/banquet-compressed.jpg');
+}
+
+.footer-link {
+	@apply transition duration-300 ease-in-out tracking-tight
+}
+
+.footer-link:hover {
+	@apply text-yellow-500
 }
