--- a/source/_assets/css/debugging.css
+++ b/source/_assets/css/debugging.css
@@ -3,7 +3,7 @@ footer:nth-of-type(1):before {
 	content: 'Viewport XS';
 	position: fixed;
 	bottom: 0;
-	left: 0;
+	right: 0;
 	width: 125px;
 	height: 80px;
 	z-index: 99;
