--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -688,6 +688,14 @@ video {
   background-image: url('../images/layout/home-alistair-mcgowan-compressed.jpg');
 }
 
+.webp .host-bio {
+  background-image: url('../images/layout/host-alistair-mcgowan.webp');
+}
+
+.no-webp .host-bio {
+  background-image: url('../images/layout/host-alistair-mcgowan.jpg');
+}
+
 .stats h3::after {
   content: ' ';
   display: block;
@@ -750,12 +758,83 @@ div[class*="gallery-tile-"] {
   color: rgba(255, 194, 14, var(--text-opacity))
 }
 
-.webp .header {
-  background-image: url('../video/she-awards-background-poster-compressed.webp');
+.webp .header-a {
+  background-image: url('../images/layout/hero-1-compressed.webp');
 }
 
-.no-webp .header {
-  background-image: url('../video/she-awards-background-poster-compressed.jpg');
+.no-webp .header-a {
+  background-image: url('../images/layout/hero-1-compressed.jpg');
+}
+
+.webp .header-b {
+  background-image: url('../images/layout/hero-1-compressed.webp');
+}
+
+.no-webp .header-b {
+  background-image: url('../images/layout/hero-1-compressed.jpg');
+}
+
+.webp .header-c {
+  background-image: url('../images/layout/hero-1-compressed.webp');
+}
+
+.no-webp .header-c {
+  background-image: url('../images/layout/hero-1-compressed.jpg');
+}
+
+.webp .sponsorship-a {
+  background-image: url('../images/layout/sponsorship-a-compressed.webp');
+}
+
+.no-webp .sponsorship-a {
+  background-image: url('../images/layout/sponsorship-a-compressed.jpg');
+}
+
+.webp .sponsorship-b {
+  background-image: url('../images/layout/sponsorship-b-compressed.webp');
+}
+
+.no-webp .sponsorship-b {
+  background-image: url('../images/layout/sponsorship-b-compressed.jpg');
+}
+
+.webp .sponsorship-brochure {
+  background-image: url('../images/layout/sponsorship-b-compressed.webp');
+}
+
+.no-webp .sponsorship-brochure {
+  background-image: url('../images/layout/sponsorship-b-compressed.jpg');
+}
+
+.webp .sponsorship-contact {
+  background-image: url('../images/layout/sponsorship-contact-compressed.webp');
+}
+
+.no-webp .sponsorship-contact {
+  background-image: url('../images/layout/sponsorship-contact-compressed.jpg');
+}
+
+.webp .sponsorship-tickets {
+  background-image: url('../images/layout/sponsorship-tickets-compressed.webp');
+}
+
+.no-webp .sponsorship-tickets {
+  background-image: url('../images/layout/sponsorship-tickets-compressed.jpg');
+}
+
+.collage {
+  width: 100%;
+  height: 18rem;
+  background-size: cover;
+  background-position: center
+}
+
+.webp .collage {
+  background-image: url('../images/layout/footer-strip-compressed.webp');
+}
+
+.no-webp .collage {
+  background-image: url('../images/layout/footer-strip-compressed.jpg');
 }
 
 /* DEBUGGING - REMOVE FOR STAGING/PRODUCTION */
