--- a/source/_assets/css/custom.css
+++ b/source/_assets/css/custom.css
@@ -85,7 +85,7 @@ div[class*="gallery-tile-"] {
 }
 
 .footer-link {
-	@apply transition duration-300 ease-in-out tracking-tight
+	@apply transition duration-300 ease-in-out tracking-tight py-2
 }
 
 .footer-link:hover {
@@ -213,6 +213,10 @@ div[class*="gallery-tile-"] {
   max-height: 0;
 }
 
-.faq p {
+.faq p, .sponsor p {
 	@apply pb-3
+}
+
+.faq p:last-of-type, .sponsor p:last-of-type {
+	@apply pb-0
 }
