--- a/source/_assets/css/custom.css
+++ b/source/_assets/css/custom.css
@@ -65,7 +65,7 @@ div[class*="gallery-tile-"] {
 }
 
 .no-webp .gallery-tile-b {
-	background-image: url('../images/layout/home-gallery-tile-a-compressed.jpg');
+	background-image: url('../images/layout/home-gallery-tile-b-compressed.jpg');
 }
 
 .webp .gallery-tile-c {
@@ -73,7 +73,7 @@ div[class*="gallery-tile-"] {
 }
 
 .no-webp .gallery-tile-c {
-	background-image: url('../images/layout/home-gallery-tile-a-compressed.jpg');
+	background-image: url('../images/layout/home-gallery-tile-c-compressed.jpg');
 }
 
 .webp .highlights-video {
@@ -101,19 +101,27 @@ div[class*="gallery-tile-"] {
 }
 
 .webp .header-b {
-	background-image: url('../images/layout/hero-1-compressed.webp');
+	background-image: url('../images/layout/hero-2-compressed.webp');
 }
 
 .no-webp .header-b {
-	background-image: url('../images/layout/hero-1-compressed.jpg');
+	background-image: url('../images/layout/hero-2-compressed.jpg');
 }
 
 .webp .header-c {
-	background-image: url('../images/layout/hero-1-compressed.webp');
+	background-image: url('../images/layout/hero-3-compressed.webp');
 }
 
 .no-webp .header-c {
-	background-image: url('../images/layout/hero-1-compressed.jpg');
+	background-image: url('../images/layout/hero-3-compressed.jpg');
+}
+
+.webp .header-d {
+	background-image: url('../images/layout/hero-4-compressed.webp');
+}
+
+.no-webp .header-d {
+	background-image: url('../images/layout/hero-4-compressed.jpg');
 }
 
 .webp .sponsorship-a {
@@ -222,6 +230,8 @@ div[class*="gallery-tile-"] {
 }
 
 /* Splide Slider Theme : Sea Green - adapted for SHE Awards colour pallette */
+
+/*! purgecss start ignore */
 @keyframes splide-loading {
     0% {
         transform: rotate(0);
@@ -347,6 +357,8 @@ div[class*="gallery-tile-"] {
 }
 .splide__pagination__page.is-active {
     /*background: #20b2aa;*/
+    transform: scale(1.4);
+    -webkit-transform: scale(1.4);
     @apply bg-yellow-500
 }
 .splide__pagination__page:hover {
@@ -438,3 +450,4 @@ div[class*="gallery-tile-"] {
     width: 5px;
     height: 20px;
 }
+/*! purgecss end ignore */
