--- a/source/_assets/css/custom.css
+++ b/source/_assets/css/custom.css
@@ -84,6 +84,10 @@ div[class*="gallery-tile-"] {
 	background-image: url('../images/layout/banquet-compressed.jpg');
 }
 
+footer .watermark {
+    background-image: url('../images/layout/wbm-watermark.svg');
+}
+
 .footer-link {
 	@apply transition duration-300 ease-in-out tracking-tight py-2
 }
