--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -10,7 +10,7 @@
 /*! purgecss end ignore */
 
 /* DEBUGGING - REMOVE FOR STAGING/PRODUCTION */
-@import "debugging";
+/*@import "debugging";*/
 
 /* Tailwind */
 @import "tailwindcss/utilities";
