Content updates & snagging

--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -1718,7 +1718,55 @@ button.swiper-pagination-bullet {
 
 /* DEBUGGING - REMOVE FOR STAGING/PRODUCTION */
 
-/*@import "debugging";*/
+/* DEBUGGING - REMOVE FOR PRODUCTION */
+
+.border-dev {
+  border-width: 1px;
+  --border-opacity: 1;
+  border-color: #38b2ac;
+  border-color: rgba(56, 178, 172, var(--border-opacity))
+}
+
+footer:nth-of-type(1):before {
+  content: 'Viewport XS';
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 125px;
+  height: 80px;
+  z-index: 99;
+  padding: 15px;
+  text-align: center;
+  background-color: red;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+@media (min-width: 640px) {
+  footer:nth-of-type(1):before {
+    content: 'Viewport SM';
+  }
+}
+
+@media (min-width: 768px) {
+  footer:nth-of-type(1):before {
+    content: 'Viewport MD';
+  }
+}
+
+@media (min-width: 1024px) {
+  footer:nth-of-type(1):before {
+    content: 'Viewport LG';
+  }
+}
+
+@media (min-width: 1280px) {
+  footer:nth-of-type(1):before {
+    content: 'Viewport XL';
+  }
+}
 
 /* Tailwind */
 
